# MimicKit

./: .gitignore  CLAUDE.md  CODEBASE_OVERVIEW.md  DEBUGGING_STATUS.md  KEY_INTEGRATION_POINTS.md  LEARNINGS.md  QUICK_REFERENCE.txt  README.md  env.sh  imgui.ini  pyproject.toml  requirements.txt
args/: add_pi_plus_args.txt  amp_pi_plus_args.txt  deepmimic_pi_plus_ppo_args.txt  hrl_steering_humanoid_sword_shield_args.txt
mimickit/: __init__.py  run.py
mimickit/util/: logger.py  (+4 more)
tools/: capture_closedloop_trace.py  capture_detailed_trace.py  capture_full_trace.py  capture_obs_trace.py  dump_joint_frames.py  dump_physx_params.py  encode_motions_to_latents.py  export_amp_onnx.py  export_go2_web.py  export_hlc_onnx.py  export_humanoid_json.py  export_onnx.py  export_onnx_v2.py  inspect_isaaclab_physx.py  inspect_usd_physx.py  ovphysx_replay_trace.py  physx_vs_fk_test.py  pose_test_cases.py  random_pose_test.py  record_trajectory.py  test_onnx_in_isaaclab.py  ws_inference_server.py
web/: amp.html  amp_humanoid_actor.onnx  amp_humanoid_data.json  closedloop_trace.json  detailed_trace.json  full_trace.json  go2.html  go2_actor.onnx  go2_data.json  hlc_heading.onnx  hlc_location.onnx  hlc_reach.onnx  hlc_strike.onnx  humanoid_data.json  humanoid_sword_shield.xml  index.html  isaac_trace.json  isaaclab_cpu_trace.json  knee_test.html  latent_presets.json  model_config.json  negate_test.html  newton_trace.json  obs_trace.json  obs_viz.html  parseMJCF.js  physx_vs_fk_test.json  pose_tests.json  random_pose_test.json  stacked_hinge_test.html  test_parseMJCF.html  tpose_test.json
(+60 files in other folders)
